--- a/cloudbuild.backend.yaml
+++ b/cloudbuild.backend.yaml
@@ -7,3 +7,6 @@ steps:
 
 - name: 'gcr.io/cloud-builders/gcloud'
   args: ['run', 'deploy', 'notes-be', '--image', 'gcr.io/$PROJECT_ID/notes-be', '--region', 'us-central1', '--platform', 'managed', '--allow-unauthenticated']
+
+options:
+  logging: CLOUD_LOGGING_ONLY
