--- a/cloudbuild.backend.yaml
+++ b/cloudbuild.backend.yaml
@@ -1,6 +1,7 @@
 steps:
 - name: 'gcr.io/cloud-builders/docker'
   args: ['build', '-t', 'gcr.io/$PROJECT_ID/notes-be', '.']
+  dir: 'notes_be'  # Add this line to specify the directory
 
 - name: 'gcr.io/cloud-builders/docker'
   args: ['push', 'gcr.io/$PROJECT_ID/notes-be']
